[gd_scene load_steps=11 format=3 uid="uid://bbbspt027k0x3"]

[ext_resource type="Script" path="res://ouroboros/scripts/interface/pause_control.gd" id="1_07ung"]
[ext_resource type="Script" path="res://ouroboros/scripts/interface/menu_control.gd" id="2_f8c46"]
[ext_resource type="LabelSettings" uid="uid://cslyk2capep48" path="res://ouroboros/config/interface/pause_label_font.tres" id="3_36k5q"]
[ext_resource type="Script" path="res://ouroboros/scripts/interface/back_button.gd" id="3_a2dyc"]
[ext_resource type="Script" path="res://ouroboros/scripts/interface/quit_menu_control.gd" id="3_vsixm"]
[ext_resource type="Theme" uid="uid://bpwxalae1j42b" path="res://ouroboros/config/interface/button_theme.tres" id="4_ujg4y"]
[ext_resource type="LabelSettings" uid="uid://dmi20rjo8etdc" path="res://ouroboros/config/interface/pause_body_font.tres" id="6_yghfw"]
[ext_resource type="Script" path="res://ouroboros/scripts/interface/controls_menu_control.gd" id="8_3a72l"]
[ext_resource type="Texture2D" uid="uid://dq288qwgehjb0" path="res://ouroboros/textures/mouse.png" id="9_0s8h8"]
[ext_resource type="Texture2D" uid="uid://c7djmeqvhtpuy" path="res://ouroboros/textures/keycap.png" id="10_hy2dc"]

[node name="PauseControl" type="Control"]
process_mode = 2
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_07ung")

[node name="BaseMenuControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 1260.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_f8c46")
swap_list = {
NodePath("ControlsButton"): NodePath("../ControlsMenuControl"),
NodePath("QuitButton"): NodePath("../QuitMenuControl"),
NodePath("VisualsButton"): NodePath("../VisualMenuControl")
}

[node name="VisualsButton" type="Button" parent="BaseMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -240.0
offset_right = 64.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "Visuals"
flat = true

[node name="ControlsButton" type="Button" parent="BaseMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -192.0
offset_right = 64.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "Controls"
flat = true

[node name="SaveButton" type="Button" parent="BaseMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -144.0
offset_right = 72.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "Save/Load"
flat = true

[node name="ReturnButton" type="Button" parent="BaseMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "RETURN"
flat = true
script = ExtResource("3_a2dyc")

[node name="QuitButton" type="Button" parent="BaseMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -48.0
offset_right = 64.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "QUIT"
flat = true

[node name="Label" type="Label" parent="BaseMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = -336.0
offset_right = 140.5
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 2
text = "pause"
label_settings = ExtResource("3_36k5q")
horizontal_alignment = 1
uppercase = true

[node name="VisualMenuControl" type="Control" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 1260.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResolutionSlider" type="HSlider" parent="VisualMenuControl"]
auto_translate_mode = 1
offset_left = 448.0
offset_top = 144.0
offset_right = 768.0
offset_bottom = 184.0
theme = ExtResource("4_ujg4y")
min_value = 1.0
value = 50.0

[node name="ResolutionSpinBox" type="SpinBox" parent="VisualMenuControl"]
auto_translate_mode = 1
offset_left = 768.0
offset_top = 144.0
offset_right = 835.75
offset_bottom = 184.0
theme = ExtResource("4_ujg4y")
min_value = 1.0
value = 50.0
alignment = 1

[node name="OptionButton" type="OptionButton" parent="VisualMenuControl"]
layout_mode = 0
offset_left = 664.0
offset_top = 192.0
offset_right = 800.0
offset_bottom = 230.0
theme = ExtResource("4_ujg4y")
selected = 0
item_count = 3
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="ApplyChangesButton" type="Button" parent="VisualMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -104.0
offset_right = 97.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "Apply Changes"
flat = true

[node name="BackButton" type="Button" parent="VisualMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -48.0
offset_right = 64.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "BACK"
flat = true
script = ExtResource("3_a2dyc")

[node name="ResolutionLabel" type="Label" parent="VisualMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -232.0
offset_right = 128.0
offset_bottom = -207.0
grow_horizontal = 2
grow_vertical = 2
text = "Resolution Scale"
label_settings = ExtResource("6_yghfw")
horizontal_alignment = 1

[node name="AALabel" type="Label" parent="VisualMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -160.0
offset_right = 8.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
text = "Anti-aliasing quality"
label_settings = ExtResource("6_yghfw")
horizontal_alignment = 1

[node name="Label" type="Label" parent="VisualMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -336.0
offset_right = 128.0
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 2
text = "visuals"
label_settings = ExtResource("3_36k5q")
horizontal_alignment = 1
uppercase = true

[node name="ControlsMenuControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 1260.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_3a72l")

[node name="MouseSlider" type="HSlider" parent="ControlsMenuControl"]
layout_mode = 0
offset_left = 320.0
offset_top = 552.0
offset_right = 640.0
offset_bottom = 592.0
theme = ExtResource("4_ujg4y")
min_value = 1.0
value = 50.0

[node name="MouseSpinBox" type="SpinBox" parent="ControlsMenuControl"]
layout_mode = 0
offset_left = 640.0
offset_top = 552.0
offset_right = 707.75
offset_bottom = 592.0
theme = ExtResource("4_ujg4y")
min_value = 1.0
value = 50.0
alignment = 1

[node name="InvertMouseCheckBox" type="CheckBox" parent="ControlsMenuControl"]
layout_mode = 0
offset_left = 752.0
offset_top = 536.0
offset_right = 960.0
offset_bottom = 600.0
theme = ExtResource("4_ujg4y")
text = "Invert Mouse"
alignment = 2

[node name="BackButton" type="Button" parent="ControlsMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 256.0
offset_right = 64.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "BACK"
flat = true
script = ExtResource("3_a2dyc")

[node name="MenuBackground" type="ColorRect" parent="ControlsMenuControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -224.0
offset_right = 384.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.28, 0.28, 0.28, 0.658824)

[node name="Label" type="Label" parent="ControlsMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -336.0
offset_right = 236.0
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 2
text = "controls"
label_settings = ExtResource("3_36k5q")
horizontal_alignment = 1
uppercase = true

[node name="Mouse" type="TextureRect" parent="ControlsMenuControl"]
texture_filter = 1
layout_mode = 0
offset_left = 728.0
offset_top = 264.0
offset_right = 968.0
offset_bottom = 520.0
texture = ExtResource("9_0s8h8")

[node name="Label" type="Label" parent="ControlsMenuControl/Mouse"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -248.0
offset_right = 220.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 2
text = "Interact"
label_settings = ExtResource("3_36k5q")
horizontal_alignment = 1

[node name="Keys" type="Control" parent="ControlsMenuControl"]
anchors_preset = 0
offset_left = 8.0
offset_top = -32.0
offset_right = 48.0
offset_bottom = 8.0
metadata/_edit_group_ = true

[node name="Key" type="TextureRect" parent="ControlsMenuControl/Keys"]
texture_filter = 1
layout_mode = 0
offset_left = 408.0
offset_top = 200.0
offset_right = 520.0
offset_bottom = 328.0
texture = ExtResource("10_hy2dc")

[node name="Label" type="Label" parent="ControlsMenuControl/Keys/Key"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 94.0
offset_bottom = 118.0
scale = Vector2(1.07, 0.78)
text = "W"
label_settings = ExtResource("3_36k5q")

[node name="Key2" type="TextureRect" parent="ControlsMenuControl/Keys"]
auto_translate_mode = 1
texture_filter = 1
layout_mode = 0
offset_left = 408.0
offset_top = 320.0
offset_right = 520.0
offset_bottom = 448.0
texture = ExtResource("10_hy2dc")

[node name="Label" type="Label" parent="ControlsMenuControl/Keys/Key2"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 102.0
offset_bottom = 118.0
scale = Vector2(1.07, 0.78)
text = "S"
label_settings = ExtResource("3_36k5q")

[node name="Key3" type="TextureRect" parent="ControlsMenuControl/Keys"]
auto_translate_mode = 1
texture_filter = 1
layout_mode = 0
offset_left = 528.0
offset_top = 320.0
offset_right = 640.0
offset_bottom = 448.0
texture = ExtResource("10_hy2dc")

[node name="Label" type="Label" parent="ControlsMenuControl/Keys/Key3"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 102.0
offset_bottom = 118.0
scale = Vector2(1.07, 0.78)
text = "D"
label_settings = ExtResource("3_36k5q")

[node name="Key4" type="TextureRect" parent="ControlsMenuControl/Keys"]
auto_translate_mode = 1
texture_filter = 1
layout_mode = 0
offset_left = 288.0
offset_top = 320.0
offset_right = 400.0
offset_bottom = 448.0
texture = ExtResource("10_hy2dc")

[node name="Label" type="Label" parent="ControlsMenuControl/Keys/Key4"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 102.0
offset_bottom = 118.0
scale = Vector2(1.07, 0.78)
text = "A"
label_settings = ExtResource("3_36k5q")

[node name="Label" type="Label" parent="ControlsMenuControl/Keys"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 212.0
offset_top = 420.0
offset_right = 672.0
offset_bottom = 530.0
grow_horizontal = 2
grow_vertical = 2
text = "Movement"
label_settings = ExtResource("3_36k5q")
horizontal_alignment = 1

[node name="MouseLabel" type="Label" parent="ControlsMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 176.0
offset_bottom = 201.0
grow_horizontal = 2
grow_vertical = 2
text = "Mouse sensitivity"
label_settings = ExtResource("6_yghfw")
horizontal_alignment = 1

[node name="QuitMenuControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 1260.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_vsixm")

[node name="MainMenuButton" type="Button" parent="QuitMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -208.0
offset_right = 73.0
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "Main Menu"
flat = true

[node name="DesktopButton" type="Button" parent="QuitMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -160.0
offset_right = 64.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "Desktop"
flat = true

[node name="BackButton" type="Button" parent="QuitMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -112.0
offset_right = 64.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ujg4y")
text = "BACK"
flat = true
script = ExtResource("3_a2dyc")

[node name="Label" type="Label" parent="QuitMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -336.0
offset_right = 128.0
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 2
text = "quit"
label_settings = ExtResource("3_36k5q")
horizontal_alignment = 1
uppercase = true

[node name="WarningLabel" type="Label" parent="QuitMenuControl"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -232.0
offset_right = 137.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
text = "WARNING: unsaved progress will be lost!"
label_settings = ExtResource("6_yghfw")
horizontal_alignment = 1
